2013-06-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/sdcc.vcxproj: removed boost library path
	* src/stm8/stm8.vcxproj,
	* src/stm8/stm8.vcxproj.filters: added peep.[ch]
	* src/z80/z80.vcxproj: fixed message typo
	* src/stm8/peep.c: fixed errors for MSVC (C89 compatible only):
	  only declarations at start of block
	* support/packihx/packihx.c: whitespace

2013-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Prepare for replacing absolute jumps by relative jumps and inverting jump conditions.
	* src/stm8/peep.c,
	  src/SDCCpeeph.c:
	  Fix buffer overflows, improve error detection.

2013-06-08 Valentin Dudouyt <valentin dudouyt AT gmail.com>

	* src/stm8/main.c,
	* src/stm8/peep.h,
	* src/stm8/peep.c:
	  Implemented stm8instructionSize.

2013-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Cleanup debugging code in lospre.

2013-06-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  tests/bug-2181.c:
	  Fix bug #2181.

2013-06-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* src/stm8/stm8.vcxproj,
	* src/stm8/stm8.vcxproj.filters: added stm8 project
	* src/hc08/hc08.vcxproj,
	* src/z80/z80.vcxproj,
	* src/sdcc.vcxproj: use boost 1.50, the last working installer from boostpro
	* debugger/mcs51/symtab.h,
	* src/ds390/gen.c,
	* src/hc08/gen.c,
	* src/mcs51/gen.c,
	* src/pic14/gen.c,
	* src/pic16/gen.c,
	* src/pic16/glue.c,
	* src/SDCCast.c,
	* src/SDCCdwarf2.c,
	* src/SDCCglue.c,
	* src/SDCCsymt.h,
	* src/z80/gen.c: fixed signed/unsigned comparison warnings
	* src/stm8/gen.c: fixed errors for MSVC (C89 compatible only):
	  don't use snprintf but only SNPRINT,
	  only declarations at start of block,
	  don't use true/false but only TRUE/FALSE
	* src/stm8/main.c (stm8_defaultRules): fixed init error
	* src/stm8/ralloc2.cc (instruction_cost): fixed warning
	* src/SDCCglue.c (glue): removed target dependent code
	* support/regression/fwk/include/testfwk.h: removed ASSERT_FAILED,